# ros2-sys

./: Dockerfile  README.md  docker-compose.yml  setup_gui.sh  test_demo.sh  test_nodes.sh  test_robot_services.sh  test_simple_demo.sh  test_warehouse_demo.sh
docs/: COMPLETE_SETUP_GUIDE.md  OBSTACLE_AVOIDANCE_PARAMETERS.md  ODOMETRY_CORRECTION_IMPLEMENTATION.md  README.md  ROS2_NODE_ARCHITECTURE.md  ROS2_SERVICES_GUIDE.md
install/transport_robots/lib/transport_robots/: product_manager.py  robot_service_server.py  warehouse_manager.py
install/transport_robots/share/transport_robots/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/transport_robots/share/transport_robots/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_transport_robots__rosidl_generator_cExport.cmake  export_transport_robots__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_transport_robots__rosidl_typesupport_fastrtps_cExport.cmake  (+5 more)
log/: latest_build
src/transport_robots/: CMakeLists.txt
src/transport_robots/launch/: warehouse_clean_simulation.launch.py  warehouse_demo.launch.py  warehouse_simulation.launch.py
src/transport_robots/models/: simple_robot.sdf
src/transport_robots/scripts/: enhanced_warehouse_demo.py  obstacle_avoidance_controller.py  robot_client_app.py  robot_controller.py  robot_service_server.py  robot_service_server_with_avoidance.py  warehouse_demo_manager.py
src/transport_robots/srv/: SetGoal.srv
src/transport_robots/urdf/: transport_robot.urdf.xacro
(+36 files in other folders)
